# glot-cli

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  REFACTOR.md  glot.py  go.mod  main.go  main_test.go  package.json  po.go  po_test.go  pyproject.toml  requirements.txt  tsconfig.json
.github/workflows/: release.yml  tests.yml
data/: languages.json
src/: index.ts
src/cli/: cli.ts  env.ts  exit.ts  render.ts
src/cli/commands/: browse.ts  core.ts  glossary.ts  review.ts  serve.ts  status.ts  translate.ts
src/cli/server/: assets.ts  httpServer.ts  template.ts
src/core/: ai-client.ts  config.ts  core-translations.ts  deps.ts  errors.ts  glossary.ts  http.ts  languages.ts  prompts.ts
src/core/operations/: corePull.ts  glossaryPull.ts  review.ts  serveEditor.ts  status.ts  translate.ts
src/core/po/: blocks.ts  entry.ts  parser.ts  poFile.ts  types.ts  writer.ts
test/cli/: cli.test.ts  render.test.ts  server.test.ts
test/core/: ai-client.test.ts  core-translations.test.ts  deps.test.ts  glossary-core-pull.test.ts  glossary.test.ts  languages.test.ts  po.test.ts  prompts.test.ts  review.test.ts  serveEditor.test.ts  status.test.ts  translate.test.ts
test/core/fixtures/: classic-editor-ne.po
tests/: test_glot.py
